--- a/manifest.yml
+++ b/manifest.yml
@@ -7,7 +7,7 @@ applications:
   random-route: true
   path: /var/lib/jenkins/workspace/FirstMavenJob/target/HelloWorld-0.0.1-SNAPSHOT.jar
   buildpacks:
-    - sap_java_buildpack
+    - java_buildpack
   env:
     TARGET_RUNTIME: tomee7
     SET_LOGGING_LEVEL: '{ROOT: INFO, com.sap.cloud.sdk: INFO}'
