--- a/manifest.yml
+++ b/manifest.yml
@@ -6,4 +6,10 @@ applications:
   timeout: 300
   random-route: true
   path: /var/lib/jenkins/workspace/FirstMavenJob/target/HelloWorld-0.0.1-SNAPSHOT.jar
+   buildpacks:
+     - sap_java_buildpack
+   env:
+     TARGET_RUNTIME: tomee7
+     SET_LOGGING_LEVEL: '{ROOT: INFO, com.sap.cloud.sdk: INFO}'
+     JBP_CONFIG_SAPJVM_MEMORY_SIZES: 'metaspace:128m..'
   
