--- a/manifest.yml
+++ b/manifest.yml
@@ -5,7 +5,7 @@ applications:
   memory: 1024M
   timeout: 300
   random-route: true
-  path: application/target/firstapp-application.war
+  path: /var/lib/jenkins/workspace/FirstMavenJob/target/HelloWorld-0.0.1-SNAPSHOT.jar
   buildpacks:
     - sap_java_buildpack
   env:
